Make Counter.getCount return a BigInteger
Each shard holds a long, so the aggregation of multiple longs could be larges than (Long.MAX_VALUE - 1).  Thus, we use a BigInteger to store a potentially larger nubmer.